--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@solana/web3.js": "^1.98.2",
+    "buffer": "^6.0.3",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
+    "expo-clipboard": "^7.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -27,11 +32,13 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "^14.1.6",
+    "js-sha256": "^0.11.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
@@ -40,10 +47,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/bs58": "^4.0.4",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
